add cb and shiro

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyyso
-version = 0.0.2
+version = 0.0.5
 author = greyclick
 author_email = cokeBeer@github.com
 description = a java serialized tool written in python
@@ -19,6 +19,7 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires = pycrypto
 
 [options.packages.find]
 where = src
